NYSD9-690: Committee Page > Fixed member's images appear stretched

--- a/web/themes/custom/nysenate_theme/src/patterns/global/base/_base.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/global/base/_base.scss
@@ -424,6 +424,7 @@ main.l-row--main {
 	img {
 		height: 100%;
 		width: 100%;
+    object-fit: cover;
 	}
 }
 
